# fun_gamer

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/nofrendo/: CMakeLists.txt  memguard.c  memguard.h
components/nofrendo-esp32/: CMakeLists.txt  psxcontroller.c  spi_lcd.c  video_audio.c
components/nofrendo-esp32s3/: CMakeLists.txt  Kconfig.projbuild  osd.c  spi_lcd.c  spi_lcd.h  video_audio.c
main/: CMakeLists.txt  idf_component.yml  main.c
