cmake_minimum_required(VERSION 3.12.4)

# Æ¥ï¿½ï¿½ my_component ï¿½ï¿½Ä¿Â¼ï¿½Âµï¿½ï¿½ï¿½ï¿½ï¿½ .c ï¿½Ä¼ï¿½
file(GLOB MY_COMPONENT_SRCS "psxcontroller.c" "*.c")

# ×¢ï¿½ï¿½ï¿½ï¿½ï¿?
idf_component_register(
    SRCS ${MY_COMPONENT_SRCS}
    INCLUDE_DIRS "."
    REQUIRES esp_rom soc nofrendo esp_driver_gpio esp_driver_i2s
)